# hybrid_MPI-OpenMP-OpenACC

./: CMakeLists.txt  README.md  compile-intel.sh  initial_cache.example.cmake  main.f90  sub-omp.sh
